need data augmentation for nN

--- a/run_ipynb.ipynb
+++ b/run_ipynb.ipynb
@@ -810,24 +810,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0, Loss: 0.3729\n",
+      "learning rate: 0.3\n",
+      "Epoch 0, F1 Score: 0.0000\n",
+      "Epoch 100, Loss: 0.3738\n",
+      "learning rate: 0.162108026298791\n",
+      "Epoch 200, Loss: 0.2536\n",
+      "learning rate: 0.1389873690479259\n",
+      "Epoch 300, Loss: 0.2520\n",
+      "learning rate: 0.09220706031750707\n",
+      "Epoch 400, Loss: 0.3054\n",
+      "learning rate: 0.07510322692273648\n",
+      "Epoch 500, Loss: 0.2487\n",
+      "learning rate: 0.06439162918288119\n",
+      "Epoch 600, Loss: 0.2446\n",
+      "learning rate: 0.03479466639000167\n",
+      "Epoch 700, Loss: 0.2443\n",
+      "learning rate: 0.025577277100292468\n",
+      "Epoch 800, Loss: 0.2452\n",
+      "learning rate: 0.016968488205075884\n",
+      "Epoch 900, Loss: 0.2443\n",
+      "learning rate: 0.011257241763334806\n"
+     ]
+    }
+   ],
    "source": [
     "input_size = X_train_corr.shape[1]\n",
-    "hidden_size = 2*int(len(X_train_corr.shape[0])*2/3)+1\n",
+    "hidden_size = int(X_train_corr.shape[1]*2/3)+1\n",
     "output_size = 1\n",
-    "model = NeuralNetwork(input_size, hidden_size, output_size)\n",
-    "#model=MultLayerNN(layer_sizes=[input_size,int(hidden_size/2),int(hidden_size/2),output_size])\n",
-    "# Train the model\n",
-    "model.train(x_tra_scaled1, y_tra1.reshape(-1,1), epochs=1000,batching=True,batch_size=16)"
+    "nn_model_corr = NeuralNetwork(input_size, hidden_size, output_size)\n",
+    "\n",
+    "nn_model_corr.train(X_train_corr, y_tr_clean.reshape(-1,1), epochs=1000,batching=True,batch_size=32)"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 47,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([], dtype=int64),)"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "##"
+    "np.where(nn_model_corr.predict(X_val_corr).reshape(1,-1)[0]!=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(nn_model_corr.compute_f1_score(X_train_corr,y_tr_clean.reshape(-1,1)))\n",
+    "print(nn_model_corr.compute_f1_score(X_val_corr,y_tr_clean.reshape(-1,1)))\n"
    ]
   },
   {
