--- a/run_ipynb.ipynb
+++ b/run_ipynb.ipynb
@@ -769,75 +769,56 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 32,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(262508, 20)"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "X_train_corr.shape"
+    "For the neural network we make data augmentation so that the model sees more positive labels. We do it by resampling positive samples. This way the model tends to predict more 1 than without and gives a better f1-score."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(262508, 19)"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "X_tr_ridge.shape"
+    "required_ones = int(0.3 * len(y_tr_clean))\n",
+    "existing_ones_indices = np.where(y_tr_clean == 1)[0]\n",
+    "zeros_indices = np.where(y_tr_clean == 0)[0]\n",
+    "np.random.seed(69)\n",
+    "ones_indices = np.random.choice(existing_ones_indices, required_ones - len(existing_ones_indices), replace=True)\n",
+    "zeros_indices=np.random.choice(zeros_indices,len(y_tr_clean)-required_ones,replace=False)\n",
+    "result_indices = np.concatenate([existing_ones_indices, ones_indices,zeros_indices])\n",
+    "\n",
+    "X_train_corr_aug=X_train_corr[result_indices].copy()\n",
+    "y_train_clean_aug=y_tr_clean[result_indices].copy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0, Loss: 0.3729\n",
+      "Epoch 0, Loss: 0.7222\n",
       "learning rate: 0.3\n",
       "Epoch 0, F1 Score: 0.0000\n",
-      "Epoch 100, Loss: 0.3738\n",
-      "learning rate: 0.162108026298791\n",
-      "Epoch 200, Loss: 0.2536\n",
-      "learning rate: 0.1389873690479259\n",
-      "Epoch 300, Loss: 0.2520\n",
-      "learning rate: 0.09220706031750707\n",
-      "Epoch 400, Loss: 0.3054\n",
-      "learning rate: 0.07510322692273648\n",
-      "Epoch 500, Loss: 0.2487\n",
-      "learning rate: 0.06439162918288119\n",
-      "Epoch 600, Loss: 0.2446\n",
-      "learning rate: 0.03479466639000167\n",
-      "Epoch 700, Loss: 0.2443\n",
-      "learning rate: 0.025577277100292468\n",
-      "Epoch 800, Loss: 0.2452\n",
-      "learning rate: 0.016968488205075884\n",
-      "Epoch 900, Loss: 0.2443\n",
-      "learning rate: 0.011257241763334806\n"
+      "Epoch 100, Loss: 0.8738\n",
+      "learning rate: 0.24435187499999994\n",
+      "Epoch 200, Loss: 0.6815\n",
+      "learning rate: 0.14630249373465887\n",
+      "Epoch 300, Loss: 0.5070\n",
+      "learning rate: 0.11320608076059219\n",
+      "Epoch 400, Loss: 0.4741\n",
+      "learning rate: 0.07905602833972261\n",
+      "Epoch 500, Loss: 0.5136\n",
+      "learning rate: 0.07905602833972261\n",
+      "Epoch 600, Loss: 0.4947\n",
+      "learning rate: 0.07134806557659966\n",
+      "Epoch 700, Loss: 0.4687\n",
+      "learning rate: 0.05244738441713911\n"
      ]
     }
    ],
@@ -847,46 +828,93 @@
     "output_size = 1\n",
     "nn_model_corr = NeuralNetwork(input_size, hidden_size, output_size)\n",
     "\n",
-    "nn_model_corr.train(X_train_corr, y_tr_clean.reshape(-1,1), epochs=1000,batching=True,batch_size=32)"
+    "nn_model_corr.train(X_train_corr_aug, y_train_clean_aug.reshape(-1,1), epochs=800,batching=True,batch_size=32)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(array([], dtype=int64),)"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.where(nn_model_corr.predict(X_val_corr).reshape(1,-1)[0]!=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "0\n"
+      "0.35381846232964775\n",
+      "0.34875337939321116\n"
      ]
     }
    ],
    "source": [
     "print(nn_model_corr.compute_f1_score(X_train_corr,y_tr_clean.reshape(-1,1)))\n",
-    "print(nn_model_corr.compute_f1_score(X_val_corr,y_tr_clean.reshape(-1,1)))\n"
+    "print(nn_model_corr.compute_f1_score(X_val_corr,y_val_clean.reshape(-1,1)))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_tr_ridge_aug=X_tr_ridge[result_indices].copy()\n",
+    "y_train_clean_aug=y_tr_clean[result_indices].copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0, Loss: 0.9228\n",
+      "learning rate: 0.3\n",
+      "Epoch 0, F1 Score: 0.0000\n",
+      "Epoch 100, Loss: 0.8396\n",
+      "learning rate: 0.27075\n",
+      "Epoch 200, Loss: 0.5643\n",
+      "learning rate: 0.19902612938671868\n",
+      "Epoch 300, Loss: 0.7582\n",
+      "learning rate: 0.162108026298791\n",
+      "Epoch 400, Loss: 0.4742\n",
+      "learning rate: 0.14630249373465887\n",
+      "Epoch 500, Loss: 0.4979\n",
+      "learning rate: 0.11320608076059219\n",
+      "Epoch 600, Loss: 0.4825\n",
+      "learning rate: 0.07510322692273648\n",
+      "Epoch 700, Loss: 0.4785\n",
+      "learning rate: 0.04733376443646804\n"
+     ]
+    }
+   ],
+   "source": [
+    "input_size = X_tr_ridge_aug.shape[1]\n",
+    "hidden_size = int(X_tr_ridge_aug.shape[1]*2/3)+1\n",
+    "output_size = 1\n",
+    "nn_model_corr = NeuralNetwork(input_size, hidden_size, output_size)\n",
+    "\n",
+    "nn_model_corr.train(X_tr_ridge_aug, y_train_clean_aug.reshape(-1,1), epochs=800,batching=True,batch_size=32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5655719139297848\n",
+      "0.3621113703727061\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(nn_model_corr.compute_f1_score(X_tr_ridge_aug,y_train_clean_aug.reshape(-1,1)))\n",
+    "print(nn_model_corr.compute_f1_score(X_val_ridge,y_val_clean.reshape(-1,1)))"
    ]
   },
   {
@@ -923,11 +951,11 @@
      "evalue": "",
      "output_type": "error",
      "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
-      "File \u001B[1;32m<timed exec>:23\u001B[0m\n",
-      "File \u001B[1;32mc:\\Users\\Alexi\\Documents\\EPFL\\M11\\Machine Learning\\P1\\ml-project-1-whai\\preprocessing.py:233\u001B[0m, in \u001B[0;36mscale_data\u001B[1;34m(x, is_train_data, train_mean, train_std)\u001B[0m\n\u001B[0;32m    230\u001B[0m     nonzero_std_indices \u001B[39m=\u001B[39m np\u001B[39m.\u001B[39mwhere(new_train_std \u001B[39m>\u001B[39m \u001B[39m0\u001B[39m)\n\u001B[0;32m    231\u001B[0m     zero_std_indices  \u001B[39m=\u001B[39m np\u001B[39m.\u001B[39mwhere(new_train_std \u001B[39m==\u001B[39m \u001B[39m0\u001B[39m)\n\u001B[1;32m--> 233\u001B[0m     x_scaled[:, nonzero_std_indices] \u001B[39m=\u001B[39m  (x[:, nonzero_std_indices] \u001B[39m-\u001B[39m new_train_mean[nonzero_std_indices])\u001B[39m/\u001B[39mnew_train_std[nonzero_std_indices]\n\u001B[0;32m    234\u001B[0m     x_scaled[:, zero_std_indices]   \u001B[39m=\u001B[39m   (x[:, zero_std_indices] \u001B[39m-\u001B[39m new_train_mean[zero_std_indices])\n\u001B[0;32m    236\u001B[0m \u001B[39melse\u001B[39;00m:\n",
-      "\u001B[1;31mKeyboardInterrupt\u001B[0m: "
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "File \u001b[1;32m<timed exec>:23\u001b[0m\n",
+      "File \u001b[1;32mc:\\Users\\Alexi\\Documents\\EPFL\\M11\\Machine Learning\\P1\\ml-project-1-whai\\preprocessing.py:233\u001b[0m, in \u001b[0;36mscale_data\u001b[1;34m(x, is_train_data, train_mean, train_std)\u001b[0m\n\u001b[0;32m    230\u001b[0m     nonzero_std_indices \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mwhere(new_train_std \u001b[39m>\u001b[39m \u001b[39m0\u001b[39m)\n\u001b[0;32m    231\u001b[0m     zero_std_indices  \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mwhere(new_train_std \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m)\n\u001b[1;32m--> 233\u001b[0m     x_scaled[:, nonzero_std_indices] \u001b[39m=\u001b[39m  (x[:, nonzero_std_indices] \u001b[39m-\u001b[39m new_train_mean[nonzero_std_indices])\u001b[39m/\u001b[39mnew_train_std[nonzero_std_indices]\n\u001b[0;32m    234\u001b[0m     x_scaled[:, zero_std_indices]   \u001b[39m=\u001b[39m   (x[:, zero_std_indices] \u001b[39m-\u001b[39m new_train_mean[zero_std_indices])\n\u001b[0;32m    236\u001b[0m \u001b[39melse\u001b[39;00m:\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
