Cleaned notebook, added comparison of good feature lists and submission part

--- a/run_ipynb.ipynb
+++ b/run_ipynb.ipynb
@@ -1176,27 +1176,55 @@
     }
    ],
    "source": [
-    "threshold = 0.01\n",
+    "threshold = 0.03\n",
     "\n",
     "high_weight_features=list(np.array(features_names)[np.where(np.abs(w_opt_ridge) > threshold)[0]])\n",
     "print(f\"Features selected by ridge regression weight (threshold)={threshold} : {len(high_weight_features)} features : \\n {high_weight_features}\")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 77,
+   "cell_type": "markdown",
+   "source": [
+    "#### Differences between chosen features by correlation and by weight"
+   ],
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-10-30T09:10:09.727645600Z",
-     "start_time": "2023-10-30T09:10:09.393988800Z"
-    },
     "collapsed": false
-   },
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "outputs": [],
    "source": [
-    "X_tr_ridge = X_train_poly[:, np.where(np.abs(w_opt_ridge) > threshold)[0]].copy()\n",
-    "X_val_ridge = X_val_poly[:, np.where(np.abs(w_opt_ridge) > threshold)[0]].copy()"
-   ]
+    "def diff(first, second):\n",
+    "    second = set(second)\n",
+    "    return [item for item in first if item not in second]"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "diff(high_corr_features, high_weight_features)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "diff(high_weight_features, high_corr_features)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
@@ -1204,6 +1232,18 @@
    "source": [
     "#### Ridge regression with features selected by ridge regression"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "outputs": [],
+   "source": [
+    "X_tr_ridge = X_train_poly[:, np.where(np.abs(w_opt_ridge) > threshold)[0]].copy()\n",
+    "X_val_ridge = X_val_poly[:, np.where(np.abs(w_opt_ridge) > threshold)[0]].copy()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
@@ -1400,190 +1440,34 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
    "source": [
-    "### Cross validation & Grid search for parameter tuning"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
-   "source": [
-    "#### On whole X_train"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-10-29T23:55:13.881271800Z",
-     "start_time": "2023-10-29T23:39:42.534512900Z"
-    },
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "File \u001b[1;32m<timed exec>:23\u001b[0m\n",
-      "File \u001b[1;32mc:\\Users\\Alexi\\Documents\\EPFL\\M11\\Machine Learning\\P1\\ml-project-1-whai\\preprocessing.py:233\u001b[0m, in \u001b[0;36mscale_data\u001b[1;34m(x, is_train_data, train_mean, train_std)\u001b[0m\n\u001b[0;32m    230\u001b[0m     nonzero_std_indices \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mwhere(new_train_std \u001b[39m>\u001b[39m \u001b[39m0\u001b[39m)\n\u001b[0;32m    231\u001b[0m     zero_std_indices  \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mwhere(new_train_std \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m)\n\u001b[1;32m--> 233\u001b[0m     x_scaled[:, nonzero_std_indices] \u001b[39m=\u001b[39m  (x[:, nonzero_std_indices] \u001b[39m-\u001b[39m new_train_mean[nonzero_std_indices])\u001b[39m/\u001b[39mnew_train_std[nonzero_std_indices]\n\u001b[0;32m    234\u001b[0m     x_scaled[:, zero_std_indices]   \u001b[39m=\u001b[39m   (x[:, zero_std_indices] \u001b[39m-\u001b[39m new_train_mean[zero_std_indices])\n\u001b[0;32m    236\u001b[0m \u001b[39melse\u001b[39;00m:\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
+    "## Submission"
    ],
-   "source": [
-    "%%time\n",
-    "\n",
-    "k_fold = 5\n",
-    "\n",
-    "losses_list = []\n",
-    "gen_losses_list = []\n",
-    "\n",
-    "# split data in k fold\n",
-    "k_indices = build_k_indices(y_tr_clean.shape[0], k_fold, 42)\n",
-    "\n",
-    "best_lambda_gammas = []\n",
-    "best_f1s = []\n",
-    "\n",
-    "lambdas = [0.001, 0.005, 0.01]\n",
-    "gammas = [0.05, .1, .3]\n",
-    "lambda_gammas = [(lambdas[i], gammas[j]) for j in range(len(gammas)) for i in range(len(lambdas))]\n",
-    "degrees = [3]\n",
-    "max_iters = 5\n",
-    "\n",
-    "for degree in degrees:\n",
-    "    X_train_poly,features_names=build_poly_expansion_with_interaction_features(X_train,features_names=interesting_features,max_degree=max_degree) \n",
-    "    \n",
-    "    X_train_poly, train_mean_poly, train_std_poly=scale_data(X_train_poly,is_train_data=True)\n",
-    "    \n",
-    "    f1_degree = []\n",
-    "    for lambda_, gamma in lambda_gammas:\n",
-    "        print(f\"degree: {degree}, lambda: {lambda_}, gamma: {gamma}\")\n",
-    "        f1_l_g = []\n",
-    "        \n",
-    "        for k in range(k_fold):\n",
-    "            f1, _ = cross_validation(y_tr_clean, X_train_poly, k_indices, k, lambda_, gamma, max_iters, np.zeros(X_train_poly.shape[1]))\n",
-    "            f1_l_g.append(f1)\n",
-    "        f1_degree.append(np.mean(f1_l_g))\n",
-    "\n",
-    "    ind_lambda_gamma_opt = np.argmax(f1_degree)\n",
-    "    best_lambda_gammas.append(lambda_gammas[ind_lambda_gamma_opt])\n",
-    "    best_f1s.append(f1_degree[ind_lambda_gamma_opt])\n",
-    "\n",
-    "ind_best_degree = np.argmax(best_f1s)\n",
-    "best_degree = degrees[ind_best_degree]\n",
-    "best_lambda, best_gamma = best_lambda_gammas[ind_best_degree]\n",
-    "best_f1 = best_f1s[ind_best_degree]\n",
-    "\n",
-    "print(f\"Best degree: {best_degree}, best lambda: {best_lambda}, best gamma: {best_gamma}, best f1: {best_f1}\")"
-   ]
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-10-30T00:45:21.902912Z",
-     "start_time": "2023-10-30T00:45:16.695132200Z"
-    },
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "KeyboardInterrupt\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "X_train_poly,features_names=build_poly_expansion_with_interaction_features(X_train,features_names=interesting_features,max_degree=best_degree)\n",
-    "X_val_poly,_=build_poly_expansion_with_interaction_features(X_validation,features_names=interesting_features,max_degree=best_degree)\n",
-    "X_test_poly,_=build_poly_expansion_with_interaction_features(X_test,features_names=interesting_features,max_degree=best_degree)\n",
-    "\n",
-    "X_train_poly, train_mean_poly, train_std_poly=scale_data(X_train_poly,is_train_data=True)\n",
-    "X_val_poly, _, _=scale_data(X_val_poly,is_train_data=False,train_mean=train_mean_poly,train_std=train_std_poly)\n",
-    "X_test_poly,_,_=scale_data(X_test_poly,is_train_data=False,train_mean=train_mean_poly,train_std=train_std_poly)\n",
-    "\n",
-    "w_opt, loss = reg_logistic_regression(y_tr_clean,X_train_poly,lambda_=best_lambda, initial_w=np.zeros(X_train_poly.shape[1]),max_iters=50,gamma=best_gamma)\n",
-    "\n",
-    "thr_l=np.arange(0.2,0.9,0.02)\n",
-    "f1_scores=[compute_scores_logistic_regression(X_val_poly,w_opt,y_val_clean,threshold=t)[2] for t in thr_l]\n",
-    "plt.plot(thr_l,f1_scores,marker='o')\n",
-    "plt.xlabel(\"threshold\")\n",
-    "plt.ylabel(\"f1-score\")\n",
-    "plt.title(\"Logistic regression results\")\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-10-30T00:50:07.452091300Z",
-     "start_time": "2023-10-30T00:50:07.432789500Z"
-    },
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(0.2818181818181818, 0.5200423803637648, 0.36554335008998945)\n"
-     ]
-    }
-   ],
-   "source": [
-    "threshold = 0.6\n",
-    "\n",
-    "print(compute_scores_logistic_regression(X_val_corr,w_opt,y=y_val_clean,threshold=threshold))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-10-30T00:50:34.425939Z",
-     "start_time": "2023-10-30T00:50:34.391759Z"
-    },
-    "collapsed": false
-   },
    "outputs": [],
    "source": [
-    "X_test_corr = X_test_poly[:, high_corr_indexes]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+    "X_train_scaled, train_mean, train_std=scale_data(X_train,is_train_data=True)\n",
+    "X_validation_scaled, _, _=scale_data(X_validation,is_train_data=False,train_mean=train_mean,train_std=train_std)\n",
+    "X_test_scaled, _, _=scale_data(X_test,is_train_data=False,train_mean=train_mean,train_std=train_std)\n",
+    "\n",
+    "X_train_scaled_aug,y_train_clean_aug=augment_data_with_positive_samples(X_train_scaled,y_tr_clean,ratio=0.5)\n",
+    "\n",
+    "w_opt, loss = ridge_regression(y_train_clean_aug,X_train_scaled_aug,lambda_=0.01)\n",
+    "\n",
+    "res_pred = make_predictions_linear_model(X_test_scaled, w_opt, threshold=0.460)\n",
+    "\n",
+    "res_pred[res_pred == 0] = -1\n",
+    "create_csv_submission(test_ids, res_pred, 'submission_final.csv')"
+   ],
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-10-30T00:50:35.812820500Z",
-     "start_time": "2023-10-30T00:50:35.654782900Z"
-    },
     "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "y_pred = X_test_corr.dot(w_opt)\n",
-    "y_pred = np.where(y_pred > threshold, 1, -1)\n",
-    "create_csv_submission(test_ids, y_pred, 'submission-log-cor.csv')"
-   ]
+   }
   }
  ],
  "metadata": {
